kubernetes/user-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      #      serviceAccountName: gsa-cloudsql
      containers:
        - name: user-service
          image: "europe-west3-docker.pkg.dev/eastern-kit-447119-p5/advanced-computer-science/user-service:1.0.5"
          ports:
            - containerPort: 9000
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 200m
              memory: 512Mi
        - name: cloud-sql-proxy
          image: gcr.io/cloud-sql-connectors/cloud-sql-proxy:2-bookworm
          args:
            - "eastern-kit-447119-p5:europe-west3:acs-final-db"
            - "-j"
            - "$(CLOUD_PROXY_AUTH)"
          securityContext:
            runAsNonRoot: true
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 100m
              memory: 256Mi
