kubernetes/chat-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chat-service
spec:
  type: LoadBalancer
  selector:
    app: chat-service
  ports:
    - port: 80
      targetPort: 8000
